src/objects/Apttus_XApps__XAuthorForExcelSystemProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>X-Author for Excel System properties. The record should be named as &quot;System Properties&quot;</description>
    <fields>
        <fullName>Apttus_XApps__InstanceUrl__c</fullName>
        <description>The Salesforce instance url for redirecting to custom pages</description>
        <inlineHelpText>The Salesforce instance url for redirecting to custom pages</inlineHelpText>
        <label>Instance Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_XApps__LicenseWebserviceEndpoint__c</fullName>
        <description>The Apttus license web service endpoint</description>
        <inlineHelpText>The Apttus license web service endpoint</inlineHelpText>
        <label>License Webservice Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_XApps__MergeCallTimeoutMillis__c</fullName>
        <defaultValue>50000</defaultValue>
        <description>The timeout in milliseconds for the merge request</description>
        <inlineHelpText>The timeout in milliseconds for the merge request</inlineHelpText>
        <label>Merge Call Timeout Millis</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>X-Author For Excel System Properties</label>
</CustomObject>